# camodocal-handeye

./: .gitignore  CMakeLists.txt
cmake/: handeye-config.cmake.in
src/: CMakeLists.txt  EigenUtils.h  LICENSE.txt  README.md  handeye.cpp  handeye.hpp
src/calib/: DualQuaternion.h  HandEyeCalibration.cc  HandEyeCalibration.h  QuaternionMapping.h
